--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta name="google-site-verification" content="POyRnh3Mycldjp8fDI3y8IsH6wuJCGrK7CX3D0yNhz8" />
-    
+    <meta http-equiv="refresh" content="0; url=https://wakelet.com/@MollyRingwald44030">
     <title>Redirecting...</title>
 </head>
 <body>
